src/test/run-pass/issue-3186.rs
enum y { x }

enum x {}

fn main() {}
